1)添加四种提示对话框显示逻辑（通关，游戏结束，过关，解锁测试模式） 2)添加模式、对话框枚举值，3)练习、测试模式根据cc.dm.curMode区分，进入场景相同（部分UI显示不同） 4)测试模式点错：游戏结束（重新开始/返回主菜单） 5)根据全局levelData.examLocked决定测试模式是否解锁

--- a/settings/project.json
+++ b/settings/project.json
@@ -36,7 +36,7 @@
     "height": 640,
     "width": 960
   },
+  "start-scene": "f9f152c5-aae6-4a54-b3f7-ea44578adef5",
   "use-customize-simulator": false,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
